fix scrollbars

--- a/src/ui/Panel/style.scss
+++ b/src/ui/Panel/style.scss
@@ -224,7 +224,6 @@
 
 .hfui-panel__content {
   position: relative;
-  overflow: scroll;
 }
 
 @keyframes hfui-panel-spinner-rotate {
